scrollbar issue fixed for now

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -128,3 +128,14 @@
   background-color: #fff;
   transform: skewX(-20.5deg);
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hidescrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hidescrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
